Add MML output/binary and flex-generated files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,12 @@
 *.tab.c
 *.tab.h
 
+# MML output/binary files
+mml
+mml_parser.output
+
+# Flex-generated files
+mml_scanner.cpp
+.auto/all_nodes.h
+.auto/visitor_decls.h
+
